force-app/main/default/objects/Quota_Schedule__c/Quota_Schedule__c.object-meta.xml
<CustomObject>
    <label>Quota Schedule</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Quota Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>