force-app/main/default/objects/Quota_Schedule__c/fields/Range_End__c.field-meta.xml
<CustomField>
    <fullName>Range_End__c</fullName>
    <label>Range End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>