force-app/main/default/objects/Quota_Schedule__c/fields/Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Range_Start__c</fullName>
    <label>Range Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>