force-app/main/default/objects/Quota_Schedule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>