force-app/main/default/objects/Quota_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Range_Start__c</columns>
    <columns>Range_End__c</columns>
    <columns>Quota_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>